tests/fail/destruct_resource_copy.tk
// Naked destructuring of resource string in positional destructuring should be forbidden.

shape Pair(
    a: i32,
    s: string
)

pub fn main() -> i32 {
    auto t = Pair(a = 42, s = string::from("Hello Resource"))
    auto Pair(a = .a, s = .s) = t
    return 0
}
